Working on test tool + bug corrections in database widgets

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,11 @@ Thumbs.db
 *.log
 *.tmp
 
+# API documentation generated from Doxygen #
+############################################
+doc/doxygen
+
+
 # Documents with Copyright #
 ############################
 doc/Agilent
