--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,10 @@ configure_file (
 # Common flags for compiler
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -lm")
+if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
+endif(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+message("Compiler flags: ${CMAKE_CXX_FLAGS}")
 
 # On UNIX, we allways add debug symbols (will be stripped and put into separate  .dbg files)
 if(UNIX)
