Working on test tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -296,6 +296,8 @@ if(UNIX)
 
   # mdtTtValueLimitsTest
   add_test (mdtTtValueLimitsTest ${CMAKE_CURRENT_BINARY_DIR}/tests/mdttools/mdttesttool/mdttvaluelimitstest)
+  # mdtTtTestSystemComponentTest
+  add_test (mdtTtTestSystemComponentTest ${CMAKE_CURRENT_BINARY_DIR}/tests/mdttools/mdttesttool/mdttestsystemcomponenttest)
   # mdtTestNodeTest
   add_test (mdtTestNodeTest ${CMAKE_CURRENT_BINARY_DIR}/tests/mdttools/mdttesttool/mdttestnodetest)
   # mdtTestCableTest
